--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-tabula-py
-pymupdf
+distro==1.6.0
+numpy==1.21.2
+pandas==1.3.3
+PyMuPDF==1.18.19
+python-dateutil==2.8.2
+pytz==2021.3
+six==1.16.0
+tabula-py==2.3.0
